package tiesaa;

option java_package = "fi.ely.lotju.tiesaa.proto";
option java_outer_classname = "TiesaaProtos";

message TiesaaMittatieto {
  required int64 asemaId = 1;
  required int64 aika = 2;


  message Anturi {
  
	message BDecimal {
	
	  message BInteger {
		  required bytes value = 1;
	  }
	  	
	  required int32 scale = 1;
	  required BInteger bigintValue = 2;
	}
	  
    required int64 laskennallinenAnturiId = 1;
    required BDecimal arvo = 2;
  }

  repeated Anturi anturi = 3;
}
